[package]
name = "librwmem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27", features = ["ioctl", "fs"] }
libc = "0.2"
byteorder = "1.5"
bitvec = "1"
thiserror = "1"
tokio = {version = "1", features = ["net", "rt", "macros"], default-features = false, optional = true}

[features]
default = ["async"]
async = ["dep:tokio"]

